# algorithms-project-69

./: Makefile  README.md  pyproject.toml
search_engine/: __init__.py  search_engine.py
tests/: test_search_engine.py
